--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <b
       >the input stuff here is new and a little hacky, if it doesn't seem to
-      work, try the <a href="/old.html">old version</a></b
+      work, try the <a href="/caub/old.html">old version</a></b
     >
     <hr />
     - once you have downloaded the file, go to chrome://network#general - click
