--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     </script>
   </head>
   <body style="white-space: pre-wrap; font-family: monospace">
-    <h1>chrome automatic update blocker - website made by Bypassi#7037</h1>
-    <h1>only works on chrome 85 or higher</h1>
+    <h1>CAUB - Exploit by Bypassi - Unblocked by Blobby-Boi</h1>
+    <h1>This only works on chrome 85 or higher</h1>
     <hr />
     this method (originally found by Catakang#0987) will help you keep your
     chromebook downgraded (or on the current version) without automatic updates
@@ -56,7 +56,7 @@
     wifi that you're connected to is pay-to-use (like a hotspot using data), and
     thus it will not check for updates
 
-    <b>i cannot guarantee that this will work on every wifi</b>
+    <b>I cannot guarantee that this will work on every wifi</b>
 
     <hr />
     <b>to start:</b>
