--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>chrome automatic update blocker</title>
+    <title>Chrome Automatic Update Blocker</title>
     <script defer>
       function gen() {
         try {
