--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           if (!onc.NetworkConfigurations[0]) return;
           var link = document.createElement("a");
           link.href = URL.createObjectURL(new Blob([JSON.stringify(onc)]));
-          link.download = "Blobby-caub.onc";
+          link.download = "blobby-caub.onc";
           link.click();
           link.remove();
         } catch (error) {
