--- a/old.html
+++ b/old.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>chrome automatic update blocker (old version)</title>
+    <title>Chrome Automatic Update Blocker (old version)</title>
     <script src="/old.js" defer></script>
     <script src="https://padlock.glitch.me/s.js" defer></script>
   </head>
   <body style="white-space: pre-wrap; font-family: monospace">
-<h1>Chrome Automatic Update Blocker - Website made by Bypassi#7037</h1>
+<h1>chrome automatic update blocker - website made by Bypassi#7037</h1>
 <h1>only works on chrome 85 or higher</h1>
 <hr>
 this method (originally found by Catakang#0987) will help you keep your chromebook downgraded (or on the current version) without automatic updates screwing you over
